[MODEXPW-584]. Update EDI claim file format (#658)
* [MODEXPW-584]. Update EDI claim file format

* [MODEXPW-584]. Fix unit tests

* [MODEXPW-584]. Update mapper tests

* [MODEXPW-584]. Add fileId validation back to the mock

* [MODEXPW-584]. Fix test

* [MODEXPW-584]. Reduce convertPOLine complexity